fix: minor api improvements
API specification updates. Return 404 when adding security envelope to a non existing account. Handle non existing MDC property.
